# ua-slang-mcp

./: .gitignore  .mcp.json  .npmignore  DATASET_STRUCTURE.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  rowdata4.md  tsconfig.json
.github/workflows/: daily-parse.yml  publish.yml
data/: memes_active.json  slang.json  streaks.json
scripts/: clean_rawdata.py  daily_pipeline.sh  export_cookies.py  parse_with_claude.sh  scrape_threads.py
src/ua_slang_mcp/: __init__.py  server.py
ts-src/: server.ts
